cdebconf (0.92) UNRELEASED; urgency=low

  [ Attilio Fiandrotti ]
  * Fixed some GTK frontend minor memory leaks and some widgets alignment.
  * Now also the GTK frontend, like the NEWT frontend, allows the user to go
    back by pressing the ESC key (closes: #339857).
  * Added a button in the main screen that allows the user to take screenshots
    in PNG format.

  [ Frans Pop ]
  * Add Standards-Version: back in; cdebconf also provides regular packages.

  [ Tollef Fog Heen ]
  * Move get_text common function from the text and newt frontend to
    question.h, likewise for convenience macros to question.h
  * Make it possible for frontend modules to chain onto the install
    Makefile rule
  * Rename some convenience functions in newt.c and unstaticify them, as
    they are quite convenient when writing plugins.
  * Install a useful set of headers so it's actually possible to build
    plugins outside the cdebconf tree.

 -- Attilio Fiandrotti <fiandro@tiscali.it>  Fri, 16 Dec 2005 19:16:38 +0100

cdebconf (0.91) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Fixed some memory leaks in GTK frontend.
  * If no default option(s) in SELECT and MULTISELECT is specified the first
    row gets selected by default.
  * Updated TODO doc file to reflect GTK frontend's staus.
  * Removed old and no longer needed lines of code.

  [ Frans Pop ]
  * libgtk+2.0-directfb-dev takes proper care of dependencies now.
  * Remove Standards-Version:, not applicable to udebs.

 -- Frans Pop <fjp@debian.org>  Mon,  7 Nov 2005 15:38:17 +0100

cdebconf (0.90) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Display short description above long description for notes and errors.
  * Skip description of questions during TAB navigation.
  * Improved packaging for multiple questions.
  * Fixed progress bar resume after interruption by question.

  [ Frans Pop ]
  * Make build dependency on gtk+2.0-directfb versioned.

 -- Frans Pop <fjp@debian.org>  Fri,  4 Nov 2005 17:41:42 +0100
