@@ -22,3 +22,11 @@ Type: text
 # RTL: Right To Left (Arabic, Hebrew, Persian...)
 # DO NOT USE ANYTHING ELSE
 _Description: LTR
+
+Template: debconf/gtk-button-screenshot
+Type: text
+_Description: Screenshot
+
+Template: debconf/gtk-screenshot-saved
+Type: text
+_Description: Screenshot saved as %s
