@@ -6,6 +6,8 @@ cdebconf (0.92) UNRELEASED; urgency=low
     back by pressing the ESC key (closes: #339857).
   * Added a button in the main screen that allows the user to take screenshots
     in PNG format.
+  * Added a couples of entries to cdebconf-gtk-udeb.templates to localize
+    screenshot button and message of the GTK frontend and made it use them.
 
   [ Frans Pop ]
   * Add Standards-Version: back in; cdebconf also provides regular packages.
@@ -20,7 +22,7 @@ cdebconf (0.92) UNRELEASED; urgency=low
   * Install a useful set of headers so it's actually possible to build
     plugins outside the cdebconf tree.
 
- -- Attilio Fiandrotti <fiandro@tiscali.it>  Fri, 16 Dec 2005 19:16:38 +0100
+ -- Attilio Fiandrotti <fiandro@tiscali.it>  Mon, 19 Dec 2005 20:30:56 +0100
 
 cdebconf (0.91) unstable; urgency=low
 
